[gd_scene load_steps=13 format=3 uid="uid://cxv788tugrlw0"]

[ext_resource type="Theme" uid="uid://bp3ouv6dad1vh" path="res://resources/theme.tres" id="1_5d3uc"]
[ext_resource type="Script" path="res://scripts/uniform_calc.gd" id="2_20jf4"]
[ext_resource type="Script" path="res://scripts/line_edit.gd" id="3_xjxb6"]

[sub_resource type="InputEventKey" id="InputEventKey_r1kdx"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_xwfw6"]
events = [SubResource("InputEventKey_r1kdx")]

[sub_resource type="InputEventKey" id="InputEventKey_e4qan"]
device = -1
keycode = 4194325

[sub_resource type="Shortcut" id="Shortcut_bu8c0"]
events = [SubResource("InputEventKey_e4qan")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ryox"]
bg_color = Color(0.898039, 0.152941, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kae1j"]
bg_color = Color(0.9, 0.513, 0.54525, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8d8b"]
bg_color = Color(0.419608, 0.152941, 0.211765, 1)

[sub_resource type="InputEventKey" id="InputEventKey_fb6ib"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_al7cp"]
events = [SubResource("InputEventKey_fb6ib")]

[node name="UniformCalc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5d3uc")
script = ExtResource("2_20jf4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435294, 0.564706, 0.956863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -160.5
offset_right = 145.5
offset_bottom = 160.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SamplesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "# of Samples"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SamplesLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_xjxb6")

[node name="LimitContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="LowerLabel" type="Label" parent="VBoxContainer/LimitContainer"]
layout_mode = 2
text = "Lower Limit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpperLabel" type="Label" parent="VBoxContainer/LimitContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Upper Limit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LowerLineEdit" type="LineEdit" parent="VBoxContainer/LimitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
alignment = 1
script = ExtResource("3_xjxb6")

[node name="UpperLineEdit" type="LineEdit" parent="VBoxContainer/LimitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
alignment = 1
script = ExtResource("3_xjxb6")

[node name="ObservationsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "# of Observations"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObservationsLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_xjxb6")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 216.5
offset_right = 423.5
offset_bottom = 40.0
grow_horizontal = 2
text = "CSCI 270 Project"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -60.0
offset_right = 81.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="GenerateButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_xwfw6")
text = "Generate"

[node name="GaussianButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_bu8c0")
text = "Gaussian"

[node name="ExitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_2ryox")
theme_override_styles/hover = SubResource("StyleBoxFlat_kae1j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o8d8b")
shortcut = SubResource("Shortcut_al7cp")
text = "Exit"

[connection signal="text_changed" from="VBoxContainer/SamplesLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/SamplesLineEdit" to="VBoxContainer/SamplesLineEdit" method="_on_text_changed"]
[connection signal="text_changed" from="VBoxContainer/LimitContainer/LowerLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/LimitContainer/LowerLineEdit" to="VBoxContainer/LimitContainer/LowerLineEdit" method="_on_text_changed"]
[connection signal="text_changed" from="VBoxContainer/LimitContainer/UpperLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/LimitContainer/UpperLineEdit" to="VBoxContainer/LimitContainer/UpperLineEdit" method="_on_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ObservationsLineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/ObservationsLineEdit" to="VBoxContainer/ObservationsLineEdit" method="_on_text_changed"]
[connection signal="pressed" from="HBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="HBoxContainer/GaussianButton" to="." method="_on_gaussian_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
